tests/baselines/reference/for-of45.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of45.ts(3,29): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of45.ts (1 errors) ====
    var k: string, v: boolean;
    var map = new Map([["", true]]);
    for ([k = "", v = false] of map) {
                                ~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        k;
        v;
    }